--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -33,6 +33,6 @@ a {
   flex-direction: column;
   width: 100%;
   min-height: 100vh;
-  background: #161660;
+  background: #fff;
   color: #fff;
 }
